--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+     </div>
     <header class="calc-div">
         <img src="/assets/3d-kit-calculator.png" class="img-calc" alt="">
         <h1 class="calculator-more">Calculator</h1>
